--- a/backend/API_documentation.yaml
+++ b/backend/API_documentation.yaml
@@ -37,7 +37,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: 'placeholder_schema'
+                $ref: '#/components/schemas/Image'
         '404':
           description: Image not found
 
@@ -55,6 +55,43 @@ paths:
           content:
             application/json:
               schema:
-                $ref: 'placeholder_schema'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Result'
         '400':
           description: Error with payload or model
+components:
+  schemas:
+    Image:
+      type: object
+      properties:
+        id: 
+          type: integer
+          format: int64
+        filepath: 
+          type: string
+        upload_date: 
+          type: string
+          format: date-time
+    Label:
+      type: object
+      properties:
+        id: 
+          type: integer
+          format: int64
+        label_name:
+          type: string
+    Result:
+      type: object
+      properties:
+        result_id:
+          type: integer
+          format: int64
+        image:
+          $ref: '#/components/schemas/Image'
+        label:
+          $ref: '#/components/schemas/Label'
+        confidence_score:
+          type: number
+          format: float
+
