--- a/backend/API_documentation.yaml
+++ b/backend/API_documentation.yaml
@@ -8,50 +8,20 @@ servers:
   - url: 'https://api.example.com'
     description: 'placeholder 2'
 paths:
-  /results:
+  /results/{user_id}:
     get:
-      summary: Get all results
-      responses:
-        '200': 
-          description: Successfully retrieved
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Result'
-
-  /results/{filepath}:
-    get:
-      summary: Get image and results by filepath
+      summary: Get all results for user
+      description: Populates the diary
       parameters:
-        - name: filepath
+        - name: user_id
           in: path
-          description: Filepath of image
+          description: ID of user whose results will be retrieved
           required: true
           schema:
             type: string
       responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Image'
-        '404':
-          description: Image not found
-
-  /analyze:
-    post:
-      summary: Running inference with model
-      requestBody: 
-        description: Image to be classified
-        required: true
-        content: 
-          application/octet-stream: {}
-      responses:
         '200': 
-          description: Successful inference
+          description: Successfully retrieved user's results
           content:
             application/json:
               schema:
@@ -59,42 +29,113 @@ paths:
                 items:
                   $ref: '#/components/schemas/Result'
         '400':
+          description: Invalid ID / No results found
+  /analyze:
+    post:
+      summary: Running inference with model
+      requestBody: 
+        description: Image to be classified along with user ID
+        required: true
+        content: 
+          multipart/form-data:
+            schema:
+              type: object
+              $ref: '#/components/schemas/AnalyzeRequest'      
+      responses:
+        '200': 
+          description: Successful inference
+          content:
+            multipart/form-data:
+              schema:
+                type: object
+                properties:
+                  image:
+                    type: array
+                    $ref: '#/components/schemas/Image'
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Result'
+        '400':
           description: Error with payload or model
+  /select:
+    post:
+      summary: Selecting correct classification
+      requestBody: 
+        description: Result preferred by user
+        required: true
+        content: 
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PreferredResult'
+      responses:
+        '200': 
+          description: Successful inference
+        '400':
+          description: Error
+
 components:
   schemas:
     Image:
       type: object
       properties:
-        id: 
+        image_id: 
           type: integer
           format: int64
-        filepath: 
+        user_id:
           type: string
+        image_data: 
+          type: string
+          format: binary
         upload_date: 
           type: string
           format: date-time
-    Label:
+    AnalyzeRequest:
       type: object
       properties:
-        id: 
+        user_id:
+          type: string
+        image_data:
+          type: string
+          format: binary
+        image_id:
           type: integer
           format: int64
-        label_name:
-          type: string
     Result:
       type: object
       properties:
         result_id:
           type: integer
           format: int64
-        image:
+        user_id:
+          type: str
+        image_obj:
           $ref: '#/components/schemas/Image'
-        label:
-          $ref: '#/components/schemas/Label'
+        label_name:
+          type: string
         confidence_score:
           type: number
           format: float
         result_timestamp: 
           type: string
           format: date-time
+    PreferredResult:
+      type: object
+      properties:
+        image_id:
+          type: integer
+          format: int64
+        user_id:
+          type: string
+        result_id:
+          type: integer
+          format: int64
+    ApiResponse:
+      type: object
+      properties:
+        message:
+          type: string
+        code:
+          type: integer
+          format: int64
 
