API POST + Username function
Added send with example api url
Added username functionality with cache (+change user function)

--- a/backend/API_documentation.yaml
+++ b/backend/API_documentation.yaml
@@ -2,11 +2,11 @@ openapi: 3.0.3
 info:
   title: Tech4City Entry Coding Challenge - Cloud Control
   version: 1.0.0
-servers: 
-  - url: 'https://api.example.com'
-    description: 'placeholder'
-  - url: 'https://api.example.com'
-    description: 'placeholder 2'
+servers:
+  - url: "https://api.example.com"
+    description: "placeholder"
+  - url: "https://api.example.com"
+    description: "placeholder 2"
 paths:
   /results/{user_id}:
     get:
@@ -20,29 +20,29 @@ paths:
           schema:
             type: string
       responses:
-        '200': 
+        "200":
           description: Successfully retrieved user's results
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Result'
-        '400':
+                  $ref: "#/components/schemas/Result"
+        "400":
           description: Invalid ID / No results found
   /analyze:
     post:
       summary: Running inference with model
-      requestBody: 
+      requestBody:
         description: Image to be classified along with user ID
         required: true
-        content: 
+        content:
           multipart/form-data:
             schema:
               type: object
-              $ref: '#/components/schemas/AnalyzeRequest'      
+              $ref: "#/components/schemas/AnalyzeRequest"
       responses:
-        '200': 
+        "200":
           description: Successful inference
           content:
             multipart/form-data:
@@ -51,27 +51,27 @@ paths:
                 properties:
                   image:
                     type: array
-                    $ref: '#/components/schemas/Image'
+                    $ref: "#/components/schemas/Image"
                   results:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Result'
-        '400':
+                      $ref: "#/components/schemas/Result"
+        "400":
           description: Error with payload or model
   /select:
     post:
       summary: Selecting correct classification
-      requestBody: 
+      requestBody:
         description: Result preferred by user
         required: true
-        content: 
+        content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PreferredResult'
+              $ref: "#/components/schemas/PreferredResult"
       responses:
-        '200': 
+        "200":
           description: Successful inference
-        '400':
+        "400":
           description: Error
 
 components:
@@ -79,15 +79,15 @@ components:
     Image:
       type: object
       properties:
-        image_id: 
+        image_id:
           type: integer
           format: int64
         user_id:
           type: string
-        image_data: 
+        image_data:
           type: string
           format: binary
-        upload_date: 
+        upload_date:
           type: string
           format: date-time
     AnalyzeRequest:
@@ -110,13 +110,13 @@ components:
         user_id:
           type: str
         image_obj:
-          $ref: '#/components/schemas/Image'
+          $ref: "#/components/schemas/Image"
         label_name:
           type: string
         confidence_score:
           type: number
           format: float
-        result_timestamp: 
+        result_timestamp:
           type: string
           format: date-time
     PreferredResult:
@@ -138,4 +138,3 @@ components:
         code:
           type: integer
           format: int64
-
